# bwi_guidance

./: .gitignore  README.md  stack.xml
bwi_exp1/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  policy.txt  setup.py
bwi_exp1/config/: control_experiments.yaml  data_collection_robots.yaml  default_robots.yaml  exp2_pair1.yaml  exp2_pair2.yaml  exp2_tutorials.yaml  experiment.yaml  experiment2.yaml  graph.yaml  test_experiments.yaml  training_robots.yaml  tutorials.yaml
bwi_exp1/data/: .gitignore
bwi_exp1/launch/: controller.launch  controller2.launch  controller3.launch  create_experiment.launch  environment.launch  exp1.launch  exp1_map.launch  experiment.launch  experiment2.launch  generate_all_graphs.launch  generate_graph.launch  person.launch  server.launch  view_graph.launch
bwi_exp1/maps/: exp1.pgm  exp1.yaml  graph.yaml  graph2.yaml  graph3.yaml  graph_exp1.yaml  graph_map1.yaml  graph_map2.yaml  map1.pgm  map1.yaml  map2.pgm  map2.yaml  new_graph.yaml  test.pgm
bwi_exp1/paper_images/: evaluation_maps.yaml
bwi_exp1/scripts/: controller.py  experiment.py  experiment_server.py  server.py
bwi_exp1/src/: create_experiment.cpp  mdp.cc  mdp.cpp  view_data.cpp
bwi_exp1/test/: test_mdp.cpp  test_robot_positioner.cpp  test_screen_publisher.cpp
bwi_exp1/worlds/: exp1.world
bwi_exp1/www/: experiment.html  index.html  reset.html
bwi_exp1_solver/: CMakeLists.txt  package.xml
bwi_exp1_solver/config/: experiment.yaml
bwi_exp1_solver/data/: .gitignore
bwi_exp1_solver/launch/: controller.launch  exp1_exp1.launch  exp1_graph.launch  exp1_map1.launch  exp1_map2.launch  exp1_metric_map2.launch  experiment.launch  h_controller.launch  h_experiment.launch  h_server.launch
bwi_exp1_solver/paper_images/: exp4.yaml  resultsvi.yaml
bwi_exp1_solver/scripts/: compute_metric_map2.py  exp1_exp1_results.txt  exp1_map1_results.txt  exp1_map2_results.txt  exp2_results.txt  process_exp1_data.py  process_exp2_results.py
bwi_exp1_solver/src/: env.cpp  evaluate.cpp  heuristic_solver.cpp  mdp.cpp  metric_map2.cpp  person_estimator.cpp  person_estimator2.cpp  person_model.cpp  person_model2.cpp  simple_model.cpp  structures.cpp  value_iteration.cpp
bwi_exp1_solver/test/: generate_exp2.cpp  test_mdp.cpp  test_mdp2.cpp  test_vi.cpp
bwi_exp1_visualizer/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  rosbuild.cmake
bwi_exp1_visualizer/launch/: data-exp1-4-16-2013.launch  data.launch
bwi_exp1_visualizer/src/: main.cpp  main_window.cpp  qnode.cpp
bwi_exp1_visualizer/ui/: main_window.ui
bwi_experimental/: CMakeLists.txt  package.xml
bwi_guidance/: CMakeLists.txt  package.xml  setup.py
bwi_guidance/launch/: controller.launch  create_experiment.launch  environment.launch  exp1.launch  exp1_map.launch  experiment.launch  generate_all_graphs.launch  generate_graph.launch  map3_gazebo.launch  map3_map_server.launch  server.launch  view_graph.launch
bwi_guidance/maps/: graph.yaml  graph_map1.yaml  graph_map3.yaml  multimap.yaml  test.yaml
bwi_guidance/scripts/: controller.py  server.py
bwi_guidance/src/: create_experiment.cpp
bwi_guidance/test/: test_robot_positioner.cpp  test_screen_publisher.cpp
bwi_guidance/worlds/: map3.world
bwi_guidance/www/: end.html  experiment.html  index.html  link.html  reset.html
bwi_guidance_msgs/: .gitignore  CMakeLists.txt  package.xml
bwi_guidance_msgs/action/: MultiRobotNavigation.action
bwi_guidance_msgs/msg/: ExperimentServerStatus.msg  RobotInfo.msg  RobotInfoArray.msg
bwi_guidance_msgs/srv/: UpdateGuidanceGui.srv
bwi_guidance_solver/: CMakeLists.txt  out.txt  package.xml  result1.txt  result2.txt  result3.txt  result4.txt  results
bwi_guidance_solver/condor/: aamas15.condor  aamas15_irm.condor  aamas15_irm_2.condor  aamas15_irm_3.condor  aamas15_irm_precompute.condor  aamas15_mrn.condor  aamas15_mrn2.json  all_methods.condor  all_methods.sh  condor_runner.sh  exp1_map1.condor  exp1_map2.condor  exp1_map3.condor  importance_sampling.condor  lambda_tuesday.condor  precompute_all_vi.condor  precompute_all_vi.sh  precompute_vi_exp1.condor  precompute_vi_map3.condor  reward_bound.condor  roslaunch.sh
bwi_guidance_solver/config/: all_methods.json  experiment.yaml  final.json  importance_sampling.json  lambda.json  lambda_sunday.json  lambda_tuesday.json  mcts_estimator_params.json  mcts_params.json  planning_times.json  precompute_all_vi.json  qrr14.json  reward_bound.json  shaping_reward.json  simulation.yaml  simulation_2.yaml  test.json
bwi_guidance_solver/data/: .gitignore
bwi_guidance_solver/experiments/: aamas15.json  aamas15_irm.json  aamas15_irm_2.json  aamas15_irm_3.json  aamas15_mrn.json  aamas15_mrn2.json  map3_robot_base.txt  test.json  test_irm.json  test_mrn.json
bwi_guidance_solver/launch/: all_methods.launch  controller.launch  exp1_exp1.launch  exp1_exp1_uct.launch  exp1_graph.launch  exp1_map1.launch  exp1_map2.launch  exp1_map3.launch  exp1_map3_uct.launch  exp1_metric_map2.launch  experiment.launch  multi_robot_simulation.launch  multi_robot_simulation_atrium.launch  precompute_all_vi.launch  precompute_all_vi_iros2014.launch  server.launch  single_robot.launch.xml  test.launch  test2.launch
bwi_guidance_solver/maps/: graph_2.yaml  graph_real_2.yaml
bwi_guidance_solver/nodes/: odom_to_pose
bwi_guidance_solver/paper_images/: exp1.yaml  exp2.yaml  exp3.yaml  exp5.yaml  iros.yaml  resultsheuristic.yaml
bwi_guidance_solver/perspectives/: marvin.perspective  person.perspective  rqt_gui_runner
bwi_guidance_solver/plugins/: domain_plugins.xml  irm_plugins.xml  mrn_plugins.xml
bwi_guidance_solver/scripts/: action.py  exp1_exp1_results.txt  (+16 more)
bwi_guidance_visualizer/: CMakeLists.txt  package.xml
bwi_msgs/: .gitignore  CMakeLists.txt  manifest.xml  package.xml
clingo_interface/: .gitignore  CMakeLists.txt  costmap_plugins.xml  mainpage.dox  manifest.xml  package.xml  rosbuild.cmake
clingo_interface_gui/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  rosbuild.cmake
topological_mapper/: CMakeLists.txt  graph.yaml  mainpage.dox  manifest.xml  package.xml
(+429 files in other folders)
