<?xml version="1.0"?>
<package>
  <name>bwi_exp1_solver</name>
  <version>0.0.1</version>
  <description>The bwi_exp1_solver package</description>

  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <license>BSD</license>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>bwi_exp1</build_depend>
  <build_depend>topological_mapper</build_depend>

  <run_depend>bwi_exp1</run_depend>
  <run_depend>topological_mapper</run_depend>

</package>
