<package>
  <name>bwi_exp1_visualizer</name>
  <version>0.0.1</version>
  <description>bwi_exp1_visualizer</description>

  <license>BSD</license>

  <author>Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>qt_build</build_depend> -->
  <!-- <build_depend>roscpp</build_depend> -->
  <!-- <build_depend>topological_mapper</build_depend> -->
  <!-- <build_depend>bwi_exp1</build_depend> -->
  <!-- <run_depend>qt_build</run_depend> -->
  <!-- <run_depend>roscpp</run_depend> -->
  <!-- <run_depend>topological_mapper</run_depend> -->
  <!-- <run_depend>bwi_exp1</run_depend> -->
  <!-- <test_depend>qt_build</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>topological_mapper</test_depend> -->
  <!-- <test_depend>bwi_exp1</test_depend> -->

  <export>

  </export>
</package>
