<package>
  <name>bwi_exp1_visualizer</name>
  <version>0.0.1</version>
  <description>bwi_exp1_visualizer</description>

  <license>BSD</license>

  <author>Piyush Khandelwal</author>
  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qt4</build_depend>
  <build_depend>topological_mapper</build_depend>
  <build_depend>bwi_exp1</build_depend>

  <run_depend>qt4</run_depend>
  <run_depend>topological_mapper</run_depend>
  <run_depend>bwi_exp1</run_depend>

</package>
