<?xml version="1.0"?>
<package>
  <name>bwi_guidance_solver</name>
  <version>0.0.1</version>
  <description>The bwi_guidance_solver package</description>

  <maintainer email="piyushk@gmail.com">Piyush Khandelwal</maintainer>

  <license>BSD</license>

  <author email="piyushk@gmail.com">Piyush Khandelwal</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>bwi_guidance</build_depend>
  <build_depend>bwi_guidance_msgs</build_depend>
  <build_depend>bwi_mapper</build_depend>
  <build_depend>bwi_rl</build_depend>
  <build_depend>bwi_tools</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pluginlib</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>bwi_guidance</run_depend>
  <run_depend>bwi_guidance_msgs</run_depend>
  <run_depend>bwi_mapper</run_depend>
  <run_depend>bwi_rl</run_depend>
  <run_depend>bwi_tools</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pluginlib</run_depend>


  <run_depend>python-scipy</run_depend>
  <!-- <run_depend>python-simplejson</run_depend> -->

  <export>
    <bwi_rl plugin="${prefix}/plugins/domain_plugins.xml" />
    <bwi_guidance_solver plugin="${prefix}/plugins/irm_plugins.xml" />
    <bwi_guidance_solver plugin="${prefix}/plugins/mrn_plugins.xml" />
  </export>

</package>
